--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "author": "Snipey",
   "license": "MIT",
   "scripts": {
-    "start:prod": "node dist/sharder.js",
+    "start": "node dist/sharder.js",
     "build:dev": "tsc -w",
     "start:dev": "nodemon --config nodemon.json"
   },
   "dependencies": {
+    "@types/ioredis": "^4.16.0",
     "@types/node": "^13.11.1",
     "@types/ws": "^7.2.4",
     "discord-akairo": "^8.0.0",
     "discord.js": "^12.1.1",
     "dotenv": "^8.2.0",
+    "ioredis": "^4.16.3",
     "moment": "^2.24.0",
     "pg": "^8.0.2",
     "typeorm": "^0.2.24",
